--- a/config/repositories/repo_1.toml
+++ b/config/repositories/repo_1.toml
@@ -15,6 +15,8 @@ cherry-replace-label = "already-cherry-pick-[version]"
 ignore-label = ".*LGT.*"
 cherry-pick-channel = "cherry-picker-test"
 run-test-command = "/run-all-tests"
+cherry-pick-milestone = true
+cherry-pick-assign = true
 
 # label check config
 labelCheck = true
