add sig control config field
Signed-off-by: you06 <you1474600@gmail.com>

--- a/config/repositories/repo_1.toml
+++ b/config/repositories/repo_1.toml
@@ -32,6 +32,7 @@ prLimitOrgs = "pingcap,tikv"
 
 merge = true
 canMergeLabel = "can merge"
+merge-sig-control = true
 
 watch-file-channel = "watch-file-channel-1"
 [[repo.watch-file]]
