remove black/white
Signed-off-by: you06 <you1474600@gmail.com>

--- a/config/repositories/repo_1.toml
+++ b/config/repositories/repo_1.toml
@@ -25,7 +25,7 @@ defaultChecker = "admin@pingcap.com"
 
 prLimit = true
 maxPrOpened = 3
-prLimitMode = "whitelist"
+prLimitMode = "allowlist"
 prLimitLabel = "S: AutoClose"
 contributorLabel = "T: Contributor ⭐️"
 prLimitOrgs = "pingcap,tikv"
