--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13.x
-      - name: Check
+      - name: Static Check
         run: make check
