feature: check repos(whiteList) milestons
if opened bug issues existed,it will send emails to assignees.

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -20,3 +20,11 @@ bot = "cherry-picker"
 [member]
 orgs = ["pingcap"]
 users = ["sre-bot"]
+
+[email]
+sender_addr = "xxx@pingcap.com"
+default_receiver_addr = ["xxx@pingcap.com"]
+special_password = "123456789"
+
+[check]
+white_list = ["pingcap/tidb","you06/tiedb"]
