--- a/config/repositories/repo_1.toml
+++ b/config/repositories/repo_1.toml
@@ -34,6 +34,7 @@ prLimitOrgs = "pingcap,tikv"
 merge = true
 canMergeLabel = "can merge"
 merge-sig-control = true
+skip-test-command = true
 
 watch-file-channel = "watch-file-channel-1"
 [[repo.watch-file]]
